kube/clem-unleash-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: clem-unleash
  namespace: default
spec:
  ports:
    - port: 803
      targetPort: 80
  selector:
    service: clem-unleash
  type: NodePort
