kube/clem-unleash-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clem-unleash-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - unleash.clementinesnightmare.io
    secretName: clem-unleash-tls
  defaultBackend:
    service:
      name: clem-unleash
      port:
        number: 803
  rules:
  - host: unleash.clementinesnightmare.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: clem-unleash
            port:
              number: 803
